@@ -8,20 +8,22 @@ import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
 
 @RequestMapping("/answer")
-@RequiredArgsConstructor
 @Controller
+@RequiredArgsConstructor
 public class AnswerController {
-
     private final QuestionService questionService;
     private final AnswerService answerService;
 
     @PostMapping("/create/{id}")
-    public String createAnswer(Model model, @PathVariable("id") Integer id, @RequestParam String content) {
+    public String detail(Model model, @PathVariable int id, String content) {
         Question question = this.questionService.getQuestion(id);
-        this.answerService.create(question, content);
-        return String.format("redirect:/question/detail/%s", id);
+
+        // 답변 등록 시작
+        answerService.create(question, content);
+        // 답변 등록 끝
+
+        return "redirect:/question/detail/%d".formatted(id);
     }
 }
